Add config decimals use and refact part of report

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -3,9 +3,9 @@ version=3.4.0
 depends:
     ir
     company_logo
-    jasper_reports_options
     party_lang
     sale_discount
     sale_payment_type
 xml:
+    configuration.xml
     sale.xml
