--- a/tryton.cfg
+++ b/tryton.cfg
@@ -1,8 +1,9 @@
 [tryton]
-version=4.1.0
+version=4.7.0
 depends:
     ir
     company_logo
+    jasper_reports
     jasper_reports_options
     party_lang
     sale_discount
