FIX show vat code or identifier #035818

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -5,6 +5,7 @@ depends:
     company_logo
     jasper_reports
     jasper_reports_options
+    party_identifier
     party_lang
     sale_discount
     sale_payment_type
