Fix bug and adds extra_depends to sale_discount module. #034932

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -5,7 +5,8 @@ depends:
     company_logo
     jasper_reports_options
     party_lang
-    sale_discount
     sale_payment_type
+extras_depend:
+    sale_discount
 xml:
     sale.xml
