Fix bug and adds extra_depends to sale_discount module. #034932

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -7,7 +7,8 @@ depends:
     jasper_reports_options
     party_identifier
     party_lang
-    sale_discount
     sale_payment_type
+extras_depend:
+    sale_discount
 xml:
     sale.xml
