Modified inheritance of report 038158

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -7,6 +7,7 @@ depends:
     jasper_reports_options
     party_identifier
     party_lang
+    sale
     sale_payment_type
 extras_depend:
     sale_discount
